// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package Notification;


service Notificationer {
  rpc GetVaultNotifications (google.protobuf.Empty) returns (stream VaultChange);
  rpc GetEntryNotifications (google.protobuf.Empty) returns (stream EntryChange);
}

message GetVaultNotificationsResponse {
  repeated VaultChange changes = 1;
}
message GetEntryNotificationsResponse {
  repeated EntryChange changes = 1;
}
message VaultChange {
  google.protobuf.Timestamp date = 1;
  string table = 2;
  string action = 3;
  VaultData data = 4;
}
message EntryChange {
  google.protobuf.Timestamp date = 1;
  string table = 2;
  string action = 3;
  EntryData data = 4;
}

message VaultData {
  google.protobuf.Timestamp dateOperation = 1;
  string operation  = 2;
  string  azureId= 3;
  string  coffreTitle= 4;
  string  coffreDescription= 5;
  string  coffreName= 6;
  string timeofaction = 7;

}
message EntryData {
  google.protobuf.Timestamp dateOperation = 1;
  string operation  = 2;
  string  azureId= 3;
  string  entreeId= 4;
  string timeofaction = 5;
  string  coffreTitle= 6;
  string  entreeName= 7;
  string  entreeHistoryId= 8;
}